RT: Remove alert when received notifications

--- a/Web/ResellTicketSolution/WebClient.Customer/ResetPassword.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/ResetPassword.html
@@ -216,7 +216,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					window.location.href = 'login.html';
 				}
 			} else {
-				alert("Enter all field please!!!")
+				//alert("Enter all field please!!!")
 			} 
 		}
 	</script>
