--- a/Web/ResellTicketSolution/WebClient.Customer/changePasswordProfile.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/changePasswordProfile.html
@@ -53,7 +53,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 }
             });
             OneSignal.on('notificationDisplay', function (event) {
-                alert(event.content);
+                //alert(event.content);
                 //console.log(event);
             });
         });
@@ -180,7 +180,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     //window.location.href = 'login.html';
                 }
             } else {
-                alert("All field must be written true!!")
+                //alert("All field must be written true!!")
             }
         }
     </script>
