--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket.html
@@ -60,7 +60,7 @@
 				}
 			});
 			OneSignal.on('notificationDisplay', function (event) {
-				alert(event.content);
+				//alert(event.content);
 				//console.log(event);
 			});
 		});
