--- a/Web/ResellTicketSolution/WebClient.Customer/register.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/register.html
@@ -245,7 +245,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					window.location.href = 'login.html';
 				}
 			} else {
-				alert("Enter all field please!!!")
+				//alert("Enter all field please!!!")
 			}
 		}
 	</script>
