--- a/Web/ResellTicketSolution/WebClient.Customer/transaction/transaction.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/transaction/transaction.html
@@ -61,7 +61,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 }
             });
             OneSignal.on('notificationDisplay', function (event) {
-                alert(event.content);
+                //alert(event.content);
                 //console.log(event);
             });
         });
