--- a/Web/ResellTicketSolution/WebClient.Customer/updateProfile.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/updateProfile.html
@@ -56,7 +56,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 }
             });
             OneSignal.on('notificationDisplay', function (event) {
-                alert(event.content);
+                //alert(event.content);
             });
         });
     </script>
@@ -74,7 +74,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 }
             });
             if (respone.status === 204) {
-                alert("There are some error when loading your profile detail!!");
+                //alert("There are some error when loading your profile detail!!");
                 window.location.href = 'index.html';
             } else {
                 var responeData = await respone.json();
@@ -194,7 +194,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     //window.location.href = 'index.html';
                 }
             } else {
-                //alert("Something wrong!!");
+                ////alert("Something wrong!!");
             }
         }
     </script>
