--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postEditTicket_2.html
@@ -61,7 +61,7 @@
                 }
             });
             OneSignal.on('notificationDisplay', function (event) {
-                alert(event.content);
+                //alert(event.content);
             });
         });
     </script>
