--- a/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postedTicket.html
+++ b/Web/ResellTicketSolution/WebClient.Customer/postedTicket/postedTicket.html
@@ -46,7 +46,7 @@
                 }
             });
             OneSignal.on('notificationDisplay', function (event) {
-                alert(event.content);
+                //alert(event.content);
                 //console.log(event.content);
             });
         });
